--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "tailwind_starter",
+  "name": "tailwind-starter",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "An easy to use Tailwind CSS starter template",
   "scripts": {
     "watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Tom Busillo",
   "license": "ISC",
   "dependencies": {
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.1.4"
   }
 }
