--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tom Busillo",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "tailwindcss": "^3.1.4"
   }
